# ISET_CPD_Business_Cycle

./: .gitignore  Environment_setup.md  README.md  data_download.bash  data_preparation.bash  hello.py  pyproject.toml
backend/: api.py
frontend/: package-lock.json
frontend/src/: App.css  App.js
models/: chow_lin_gdp_models.pkl
notebooks/: CPD_of_business_cycles.ipynb  Monthly_analysis.ipynb  Quarterly_GDP_to_monthly.ipynb  Quarterly_analysis.ipynb  final_gdp_data.xlsx  initial_monthly__analysis_of_business_cycles.ipynb
scripts/: process_inflation_data.py  process_nominal_exchange_rate_data.py  process_real_exchange_rate_data.py
scripts/monthly_data_scripts/: chow_lin_gdp_disaggregation.py  chow_lin_model_utils.py  create_monthly_monetary_policy_rates.py  merge_gdp_final_data_for_monthly.py  monetary_rate.py  process_GDP_data.py  process_inflation_data.py  process_monetary_rate.py
scripts/quarterly_data_scripts/: final_quarterly_data.py  growth_rates.py  merge_quarterly_data.py  process_exchange_rates_quarterly.py  process_inflation_quarterly.py  process_quarterly_gdp.py  quarterly_analysis.py
