[tool.poetry]
name = "georgia-business-cycle-cpd"
version = "0.1.0"
description = "ISET Bachelors CPD Business Cycle Analysis"
authors = ["Davit Gamtenadze <davit.gamtenadze@iset.ge>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 