[tool.poetry]
name = "georgia-business-cycle-cpd"
version = "0.1.0"
description = "ISET Bachelors CPD Business Cycle Analysis"
authors = ["Davit Gamtenadze <davit.gamtenadze@iset.ge>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
statsmodels = "^0.14.4"
matplotlib = "^3.8.0"
seaborn = "^0.13.2"
numpy = "^2.2.6"
tempdisagg = "^0.2.13"
pykalman = "^0.9.7"
stumpy = "^1.11.0"
jupyter = "^1.1.1"
lxml = "^5.4.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.13.4"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 